--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,14 @@
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "prettier/prettier": "error",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "varsIgnorePattern": "^_",
+      "argsIgnorePattern": "^_",
+      "ignoreRestSiblings": true,
+      "args": "after-used",
+      "destructuredArrayIgnorePattern": "^_",
+      "varsIgnorePattern": "actionTypes"
+    }],
     "@typescript-eslint/no-explicit-any": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
