--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
@@ -17,9 +16,11 @@
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.61.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.462.0",
     "next": "14.2.18",
     "react": "^18",
@@ -33,15 +34,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
+    "prettier": "^3.2.4",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
